# learning-cmake

./: CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
config/: CMakeLists.txt
src/: CMakeLists.txt  my_lib.cpp
